--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
+        "test:watch": "jest --watchAll",
         "lint": "eslint"
     },
     "type": "module",
@@ -16,5 +17,18 @@
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.4"
+    },
+    "dependencies": {
+        "@babel/plugin-transform-modules-commonjs": "^7.16.8",
+        "jest": "^27.4.7"
+    },
+    "babel": {
+        "env": {
+            "test": {
+                "pluggins": [
+                    "@babel/plugin-transform-modules-commonjs"
+                ]
+            }
+        }
     }
 }
