--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel": {
         "env": {
             "test": {
-                "pluggins": [
+                "plugins": [
                     "@babel/plugin-transform-modules-commonjs"
                 ]
             }
